# VectorCode

./: Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: formatting.yaml  panvimdoc.yml  release.yml  test_and_cov.yml
doc/: VectorCode-API.txt  VectorCode-cli.txt  VectorCode.txt
docs/: CONTRIBUTING.md  cli.md  neovim.md
docs/neovim/: README.md  api_references.md
lua/codecompanion/_extensions/vectorcode/: init.lua
lua/lsp/: vectorcode_server.lua
lua/vectorcode/: config.lua  init.lua  types.lua  utils.lua
lua/vectorcode/cacher/: default.lua  init.lua  lsp.lua
lua/vectorcode/integrations/: codecompanion.lua  heirline.lua  lualine.lua
lua/vectorcode/integrations/codecompanion/: common.lua  files_ls_tool.lua  files_rm_tool.lua  func_calling_tool.lua  init.lua  ls_tool.lua  query_tool.lua  vectorise_tool.lua
lua/vectorcode/jobrunner/: cmd.lua  init.lua  lsp.lua
scripts/: coverage.sh
src/vectorcode/: chunking.py  cli_utils.py  common.py  debugging.py  lsp_main.py  main.py  mcp_main.py
src/vectorcode/database/: DEVELOPERS.md  README.md  __init__.py  base.py  chroma.py  chroma0.py  chroma_common.py  errors.py  types.py  utils.py
src/vectorcode/db/: base.py  chroma.py  factory.py  local.py
src/vectorcode/rerankers/: __init__.py  base.py  builtins.py  llama_cpp.py
src/vectorcode/rewriter/: __init__.py  base.py  openai.py
src/vectorcode/subcommands/: clean.py  drop.py  hooks.py  init.py  ls.py  update.py  vectorise.py
src/vectorcode/subcommands/files/: ls.py  rm.py
src/vectorcode/subcommands/query/: __init__.py  reranker.py  types.py
src/vectorcode/subcommands/vectorise/: __init__.py  filter.py
tests/: test_chunking.py  test_cli_utils.py  test_common.py  test_lsp.py  test_main.py  test_mcp.py  test_reranker_edge_cases.py  test_rerankers.py  test_rerankers_coverage.py
tests/database/: test_chroma.py  test_chroma0.py  test_db_init.py  test_db_types.py
tests/rewriter/: test_openai.py  test_rewriter.py
tests/subcommands/: test_clean.py  test_drop.py  test_hooks.py  test_init.py  test_ls.py  test_update.py  test_vectorise.py
tests/subcommands/files/: test_files_ls.py  test_files_rm.py  test_ls.py
tests/subcommands/query/: test_query.py  test_reranker.py  test_reranker_error_handling.py  test_types.py
(+6 files in other folders)
