[build-system]
build-backend = "pdm.backend"

requires = [ "pdm-backend" ]

[project]
name = "vectorcode"
description = "A tool to vectorise repositories for RAG."
readme = "README.md"
license = { text = "MIT" }

authors = [ { name = "Davidyz", email = "hzjlyz@gmail.com" } ]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "charset-normalizer>=3.4.1",
  "chromadb==0.6.3",
  "colorlog",
  "filelock>=3.15",
  "httpx",
  "json5",
  "numpy",
  "pathspec",
  "posthog<6",
  "psutil",
  "pygments",
  "sentence-transformers",
  "shtab",
  "tabulate",
  "transformers>=4.36,!=4.51,!=4.51.1,!=4.51.2",
  "tree-sitter!=0.25",
  "tree-sitter-language-pack",
  "wheel<0.46",
]
optional-dependencies.debug = [ "coredumpy>=0.4.1" ]
optional-dependencies.intel = [ "openvino", "optimum[openvino]" ]
optional-dependencies.legacy = [ "numpy<2", "torch==2.2.2", "transformers<=4.49" ]
optional-dependencies.lsp = [ "lsprotocol", "pygls<2" ]
optional-dependencies.mcp = [ "mcp<2", "pydantic" ]

urls.documentation = "https://github.com/Davidyz/VectorCode/blob/main/docs/cli.md"
urls.github = "https://github.com/Davidyz/VectorCode"
urls.homepage = "https://github.com/Davidyz/VectorCode"

scripts.vectorcode = "vectorcode.main:main"
scripts.vectorcode-mcp-server = "vectorcode.mcp_main:main"
scripts.vectorcode-server = "vectorcode.lsp_main:main"

[dependency-groups]
dev = [
  "basedpyright>=1.29.2",
  "coverage>=7.6.12",
  "debugpy>=1.8.12",
  "ipython>=8.31",
  "pdm-backend>=2.4.3",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.1",
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "./vectorcode/_version.py"
write_template = "__version__ = '{}' # pragma: no cover"

[tool.coverage.run]
omit = [
  "./tests/*",
  "src/vectorcode/_version.py",
  "src/vectorcode/__init__.py",
  "src/vectorcode/debugging.py",
  "/tmp/*",
]
include = [ 'src/vectorcode/**/*.py' ]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = [ "./tests/" ]
